# Smart-Access-System

./: .gitignore  README.md
software_engineering/firmware/components/bsp/: CMakeLists.txt  idf_component.yml
software_engineering/firmware/components/bsp/board_v1/: board_v1.c
software_engineering/firmware/components/bsp/board_v1/include/: board_v1.h  board_v1_config.h
software_engineering/firmware/components/bsp/bsp_audio_es8311/: bsp_audio_es8311.c  bsp_audio_es8311_codec.c  bsp_audio_es8311_codec.h
software_engineering/firmware/components/bsp/bsp_audio_es8311/include/: bsp_audio_es8311.h
software_engineering/firmware/components/bsp/bsp_camera_ov5647/: bsp_camera_ov5647.c
software_engineering/firmware/components/bsp/bsp_camera_ov5647/include/: bsp_camera_ov5647.h
software_engineering/firmware/components/bsp/bsp_config/include/: bsp_config.h
software_engineering/firmware/components/bsp/bsp_display_rpi7pin/: bsp_display_attiny88.c  bsp_display_attiny88.h  bsp_display_rpi7pin.c  bsp_display_tc358762.c  bsp_display_tc358762.h
software_engineering/firmware/components/bsp/bsp_display_rpi7pin/include/: bsp_display_rpi7pin.h
software_engineering/firmware/components/bsp/bsp_network_ip101/: bsp_network_ip101.c
software_engineering/firmware/components/bsp/bsp_network_ip101/include/: bsp_network_ip101.h
software_engineering/firmware/components/bsp/bsp_pir_hcsr501/: bsp_pir_hcsr501.c
software_engineering/firmware/components/bsp/bsp_pir_hcsr501/include/: bsp_pir_hcsr501.h
software_engineering/firmware/components/bsp/bsp_relay/: bsp_relay.c
software_engineering/firmware/components/bsp/bsp_relay/include/: bsp_relay.h
software_engineering/firmware/components/bsp/bsp_storage_sdmmc/: bsp_storage_sdmmc.c
software_engineering/firmware/components/bsp/bsp_storage_sdmmc/include/: bsp_storage_sdmmc.h
software_engineering/firmware/components/bsp/bsp_touch_ft5406/: bsp_touch_ft5406.c
software_engineering/firmware/components/bsp/bsp_touch_ft5406/include/: bsp_touch_ft5406.h
software_engineering/firmware/components/dal/: CMakeLists.txt
software_engineering/firmware/components/dal/common/: dal_registry.c
software_engineering/firmware/components/dal/common/include/: dal_err.h  dal_esp_err.h  (+2 more)
software_engineering/firmware/components/dal/dal_audio/: dal_audio.c
software_engineering/firmware/components/dal/dal_camera/: dal_camera.c
software_engineering/firmware/components/dal/dal_display/: dal_display.c
software_engineering/firmware/components/dal/dal_network/: dal_network.c
software_engineering/firmware/components/dal/dal_pir/: dal_pir.c
software_engineering/firmware/components/dal/dal_relay/: dal_relay.c
software_engineering/firmware/components/dal/dal_touch/: dal_touch.c
software_engineering/firmware/components/face_feature_model/: CMakeLists.txt  Kconfig  face_feature_model.cpp  face_feature_model.hpp
software_engineering/firmware/components/middleware/: CMakeLists.txt
software_engineering/firmware/components/middleware/buffer_pool/: buffer_pool_manager.c
software_engineering/firmware/components/middleware/db_store/: db_store.c
software_engineering/firmware/components/middleware/event_bus/: mw_event_bus.c
software_engineering/firmware/components/middleware/face_engine/: esp_dl_adapter.cpp  face_engine.c
software_engineering/firmware/components/middleware/log_sink/: log_sink.c
software_engineering/firmware/components/middleware/msg_queues/: msg_queues.c
software_engineering/firmware/components/osal/: CMakeLists.txt  osal_memory.c  osal_mutex.c  osal_queue.c  osal_semaphore.c  osal_task.c  osal_timer.c
software_engineering/firmware/components/osal/include/: osal.h  osal_memory.h  osal_mutex.h  osal_queue.h  osal_semaphore.h  osal_task.h  osal_timer.h
software_engineering/firmware/components/pal/: CMakeLists.txt  idf_component.yml
software_engineering/firmware/components/pal/host_test/: CMakeLists.txt  sdkconfig.defaults  soc_caps_defs.cmake
software_engineering/firmware/components/pal/pal_cam/: pal_cam.c
software_engineering/firmware/components/pal/pal_gpio/: pal_gpio.c
software_engineering/firmware/components/pal/pal_i2c/: pal_i2c.c
software_engineering/firmware/components/pal/pal_i2s/: pal_i2s.c
software_engineering/firmware/components/pal/pal_ldo/: pal_ldo.c
software_engineering/firmware/components/pal/pal_ledc/: pal_ledc.c
software_engineering/firmware/components/pal/pal_log/: pal_log.c
software_engineering/firmware/components/pal/pal_mipi_dsi/: pal_mipi_dsi.c
software_engineering/firmware/components/pal/pal_sdmmc/: pal_sdmmc.c
software_engineering/firmware/components/pal/pal_spi/: pal_spi.c
software_engineering/firmware/components/pal/pal_uart/: pal_uart.c
software_engineering/firmware/components/pal/pal_wdt/: pal_wdt.c
software_engineering/firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
software_engineering/firmware/main/service/svc_camera/: svc_camera.c
software_engineering/firmware/main/service/svc_face_detect/: svc_face_detect.c
software_engineering/firmware/main/service/svc_face_feature/: svc_face_feature.c
software_engineering/firmware/main/service/svc_mqtt/: svc_mqtt.c
software_engineering/firmware/main/service/svc_ota/: svc_ota.c
software_engineering/firmware/main/service/svc_perm_manager/: svc_perm_manager.c
software_engineering/firmware/main/service/svc_touch/: svc_touch.c
software_engineering/firmware/main/service/svc_ui/: svc_ui.c
software_engineering/firmware/main/service/svc_wdt/: svc_wdt.c
software_engineering/firmware/test/: CMakeLists.txt  fff_globals.c  test_attiny88.c  test_audio_codec.c  test_audio_es8311.c  test_bsp_relay.c  test_buffer_pool.c  test_dal_registry.c  test_dal_relay.c  test_event_bus.c  test_service_camera.c  test_tc358762.c  test_touch_ft5406.c
software_engineering/firmware/test/mocks/: board_v1.h  esp_err.h  esp_heap_caps.h  osal_mutex.h  osal_queue.h  osal_semaphore.h  osal_task.h  osal_timer.h  pal_gpio.h  pal_i2c.h  pal_i2s.h  pal_log.h  pal_mipi_dsi.h
software_engineering/firmware/test/mocks_svc/: mw_event_bus.h
(+121 files in other folders)
