idf_component_register(
    SRCS
        "pal_log/pal_log.c"
        "pal_ledc/pal_ledc.c"
        "pal_i2c/pal_i2c.c"
        "pal_gpio/pal_gpio.c"
        "pal_uart/pal_uart.c"
        "pal_spi/pal_spi.c"
        "pal_mipi_dsi/pal_mipi_dsi.c"
        "pal_ldo/pal_ldo.c"
        "pal_wdt/pal_wdt.c"
        "pal_i2s/pal_i2s.c"
        "pal_sdmmc/pal_sdmmc.c"
        "pal_cam/pal_cam.c"

    INCLUDE_DIRS
        "pal_log/include"
        "pal_ledc/include"
        "pal_i2c/include"
        "pal_gpio/include"
        "pal_uart/include"
        "pal_spi/include"
        "pal_mipi_dsi/include"
        "pal_ldo/include"
        "pal_wdt/include"
        "pal_i2s/include"
        "pal_sdmmc/include"
        "pal_cam/include"
        "${IDF_PATH}/components/esp_lcd/dsi"

    REQUIRES
        driver
        esp_timer
        esp_driver_cam
        esp_driver_i2s
        esp_driver_sdmmc
        esp_lcd
        sdmmc
        fatfs
        vfs)
